correction du tri pour navigateurs Chrome
Les callbacks pour la fonction sort doivent retourner 0, 1 ou -1.
Firefox accepte comme réponse aussi les booléens mais pas Chrome.
Donc changement de retour de la fonction tri en 1 et -1 à la place de booléen

--- a/index.html
+++ b/index.html
@@ -207,9 +207,9 @@
                     const preelem2 = obj2[col.table.nom][col.nom]
                     const elem2 = typeof preelem2 == "string" ? preelem2.toUpperCase() : preelem2
                     if (elem1 < elem2) {
-                        return desc[i] ? false : true
+                        return desc[i] ? -1 : 1
                     } else if (elem1 > elem2) {
-                        return desc[i] ? true : false
+                        return desc[i] ? 1 : -1
                     }
                 }
                 return true
